# chalice-multi-module

.github/: deploy-workflow.yaml
.github/workflows/: deploy-workflow.yaml  deployment.yaml  release.yaml  testA-deploy.yaml
test-a/: .gitignore  app.py  pyproject.toml  requirements.txt  setup.cfg
test-a/.chalice/: config.json
test-a/.release/: note.md
test-a/tests/: test_app.py
test-b/: app.py  pyproject.toml
test-b/.chalice/: config.json
test-c/: app.py  pyproject.toml  requirements.txt
test-c/.chalice/: config.json
testA/: app.py
testA/.chalice/: config.json
testB/: app.py
testB/.chalice/: config.json
testC/: app.py
testC/.chalice/: config.json
