[tool.poetry]
name = "test-a"
version = "1.0.0"
description = ""
authors = ["Sungan-Kang "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
boto3 = "^1.16.26"
pydantic = "^1.7.3"
chalice = "^1.27.3"
httpx = {extras = ["http2"], version = "^0.16.1"}

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^3.8.4"
flake8-implicit-str-concat = "^0.4.0"
isort = "^5.6.4"
pytest = "^6.1.1"
mypy = "^0.790"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
      \.git
    | \.mypy_cache
    | \.env
    | \.gitignore
    | venv
)
'''

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

