[tool.poetry]
name = "test-c"
version = "0.1.0"
description = ""
authors = ["Sungan-Kang "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chalice = "^1.27.3"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
boto3-stubs = "^1.18.44"
flake8 = "^3.9.2"
flake8-implicit-str-concat = "^0.4.0"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^6.2.4"
pytest-freezegun = "^0.4.2"
types-requests = "^2.25.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
